[package]
name = "izoli"
version = "0.1.0"
edition = "2021"

[lib]
name = "izolilib"
path = "src/lib.rs"

[[bin]]
name = "izoli"
path = "src/bin/izoli.rs"

[dependencies]
nix = { version = "0.29.0", features = ["sched", "hostname", "mount"] }
tracing = "0.1"
tracing-appender = "0.2"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter", "fmt", "json", "local-time", "time"]
